--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body, html {
 }
 
 body {
-    background: url('unfinished-web-bg.png') no-repeat center center fixed;
+    background: url('https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/unfinished-web-bg.png') no-repeat center center fixed;
     background-size: cover;
 }
 
