--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ a:hover {
           
 .container {
     position: fixed;
-    bottom: 20;
-    right: 20;
+    bottom: 20px;
+    right: 20px;
     align-self: flex-end;
     justify-content: right;
     text-align: right;
