--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ a:hover {
           
 .container {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
     align-self: flex-end;
     justify-content: right;
     text-align: right;
@@ -58,6 +58,7 @@ h1 {
 .logo, .tagline, .contact, .instagram {
     font-size: 14px;
     margin-bottom: 10px;
+    margin-right: 10px;
     max-width: 395px; /*Line spacing works in both mobile and desktop*/
     line-height: 1.5;
     letter-spacing: 0.5px;
@@ -76,6 +77,7 @@ h1 {
         font-size: 14px;
         text-align: center;
         margin-bottom: 10px;
+        margin-right: 10px;
         align-self: flex-end;
     }
 
