--- a/style.css
+++ b/style.css
@@ -38,40 +38,29 @@ a:hover {
         border-bottom: 0px solid #ffffff;
           
 .container {
-    position: flex;
+    position: fixed;
     bottom: 0;
     right: 0;
-    align-self: flex-end;
     justify-content: right;
     text-align: right;
     padding: 50px;
 }
 
-h1 {
-    font-size: 40px;
-    font-weight: bold;
-    letter-spacing: 10px;
-    margin-bottom: 20px;
-    margin-right: 0px; 
-}
-
 .logo, .tagline, .contact, .instagram {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    justify-content: right;
+    text-align: right;
+    padding: 50px;   
     font-size: 14px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    max-width: 395px; /*Line spacing works in both mobile and desktop*/
     line-height: 1.5;
     letter-spacing: 0.5px;
     align-self: flex-end;
-    justify-content: right;
-    text-align: right;
+    max-width: 395px; /*Line spacing works in both mobile and desktop*/
 }
 
 @media (max-width: 768px) {
-    h1 {
-        font-size: 28px;
-        text-align: center;
-    }
 
 .logo, .tagline, .contact, .instagram {
         font-size: 14px;
