--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a:hover {
 .container {
     position: fixed;
     bottom: 0;
-    right: 0;
+    right: 50px;
     justify-content: right;
     text-align: right;
     padding: 50px;
@@ -49,7 +49,7 @@ a:hover {
 .logo, .tagline, .contact, .instagram {
     position: fixed;
     bottom: 0;
-    right: 0;
+    right: 50px;
     justify-content: right;
     text-align: right;
     padding: 50px;   
@@ -65,8 +65,8 @@ a:hover {
 .logo, .tagline, .contact, .instagram {
         font-size: 14px;
         text-align: center;
-        margin-bottom: 10px;
-        margin-right: 10px;
+        bottom: 0;
+        right: 0;
         align-self: flex-end;
     }
 
