--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body, html {
     font-family: 'DM Sans', sans-serif;
     color: #c0c0c0;
     display: flex;
+    position: fixed;
     align-items: flex-end;
     justify-content: right;
 }
@@ -44,6 +45,8 @@ a:hover {
     right: 50px;
     text-align: right;
     padding: 50px;
+    align-items: flex-end;
+    justify-content: right;
 }
 
 .logo, .tagline, .contact, .instagram {
@@ -52,13 +55,16 @@ a:hover {
     font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.5px;
+    text-align: right;
+    align-items: flex-end;
+    justify-content: right;
     
 }
 
 @media (max-width: 768px) {
 
 .logo, .tagline, .contact, .instagram {
-        font-size: 14px;
+        font-size: 12px;
         text-align: right;
     }
 
