--- a/style.css
+++ b/style.css
@@ -41,10 +41,10 @@ a:hover {
 
 .container {
     position: fixed;
-    bottom: 50px;
-    right: 50px;
+    bottom: 20px;
+    right: 20px;
     text-align: right;
-    padding: 50px;
+    padding: 20px;
     align-items: flex-end;
     justify-content: right;
 }
@@ -63,6 +63,16 @@ a:hover {
 
 @media (max-width: 768px) {
 
+.container {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    text-align: right;
+    padding: 20px;
+    align-items: flex-end;
+    justify-content: right;
+}
+    
 .logo, .tagline, .contact, .instagram {
         font-size: 14px;
         text-align: right;
